--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "angular1-lessons",
   "version": "1.0.0",
-  "description": "",
+  "description": "Lessons of Angular",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "http-server -p 9000 -a 0.0.0.0"
   },
   "repository": {
     "type": "git",
@@ -17,11 +18,12 @@
   },
   "homepage": "https://github.com/Krystsia/angular-lesson#readme",
   "devDependencies": {
-    
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.3.2"
   },
   "dependencies": {
     "http-server": "^0.9.0",
-    "protractor": "^4.0.3",
-    "karma": "^0.13.21"
+    "karma": "^0.13.21",
+    "protractor": "^4.0.3"
   }
 }
